[tool.poetry]
name = "chessAI"
version = "0.1.0"
description = "chess min max algo with ab pruning"
authors = ["PatrikPrit15 <pritrskypatrik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
